Rend 0.4.0 changelog:

Bugfixes:
* Screenshots are no longer black
* FPS now correctly reflects real-life performance

UX:
* Added an option to show FPS
* In-game score now shows offset from the first / second player's score

Gameplay:
* Added a new 3-player map: "Shotgun Frenzy"
* It is possible to play the game in online multiplayer!

Known Issues:
* Playing multiplayer with bots tends to desync the game, so don't use bots in online multiplayer
* Only play on local networks, preferably over LAN cable

Rend 0.3.0 changelog:

Gameplay:
* Rockets are faster by 50%

Accessibility & UX:
* Sizes of all menu titles unified to Jumbo size
* Added an option to scale HUD text

Other:
* Added support for map packs
	* You can create your own map pack in the editor and add maps to it
	* When setting up a game, you can select any number of maps from a given map pack and play them in a rotation

Rend 0.2.0 changelog:

Gameplay:
* Rebalancing:
  * Damage outputs of most weapons were adjusted
  * Ammo consumption was adjusted
  * Ammo pickup amount and max ammo limits were greatly decreased
* Added new 4-player neon level
* Added sound for weapon pickup
* Ballista sounds were changed to something more pleasant

Bugfixes:
* Flats are now correctly textured, no more texture warping
* Editor navbar menus are no longer randomly changing positions
* Fixed ballista not consuming energy

Accessibility & UX:
* Added a black outline to all ingame texts
* A loading message is displayed while launching levels from the editor
* Crosshair can be enabled
* Weapons can be automatically equipped on pickup
* Ingame font size is based off computer DPI
* Level names can contain underscores

Other:
* Screenshots can now be taken with the P key
* Optimized loading times from dozens of seconds to miliseconds

Rend 0.1.0 changelog:
* Initial release